# serverkit-rs

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  dev.ps1  dev.sh  docker-compose.yml  install.sh  patch_localhost.py  quick-start.sh  serverkit  serverkit.env.example  uninstall.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Dockerfile  cli.py  config.py  requirements.txt  run.py
backend-rs/: .gitignore  Cargo.toml  README.md
backend-rs/ai-sidecar/: package-lock.json  package.json  server.mjs  start.sh  tools.mjs
backend-rs/ai-sidecar/extensions/: cc-patch.mjs
backend-rs/crates/sk-acme/: Cargo.toml
backend-rs/crates/sk-acme/src/: cloudflare.rs  lib.rs
backend-rs/crates/sk-apps/: Cargo.toml
backend-rs/crates/sk-apps/src/: lib.rs
backend-rs/crates/sk-auth/: Cargo.toml
backend-rs/crates/sk-auth/src/: jwt.rs  lib.rs  password.rs
backend-rs/crates/sk-backups/: Cargo.toml
backend-rs/crates/sk-backups/src/: lib.rs
backend-rs/crates/sk-cloud/: Cargo.toml
backend-rs/crates/sk-cloud/src/: lib.rs
backend-rs/crates/sk-cloudflare/: Cargo.toml
backend-rs/crates/sk-cloudflare/src/: lib.rs
backend-rs/crates/sk-core/: Cargo.toml
backend-rs/crates/sk-core/src/: config.rs  crypto.rs  db.rs  lib.rs  time.rs
backend-rs/crates/sk-db/: Cargo.toml
backend-rs/crates/sk-db/src/: docker.rs  lib.rs
backend-rs/crates/sk-deploy/: Cargo.toml
backend-rs/crates/sk-deploy/src/: lib.rs
backend-rs/crates/sk-dns/: Cargo.toml
backend-rs/crates/sk-dns/src/: lib.rs
backend-rs/crates/sk-docker/: Cargo.toml
backend-rs/crates/sk-docker/src/: lib.rs
backend-rs/crates/sk-email/: Cargo.toml
backend-rs/crates/sk-email/src/: lib.rs
backend-rs/crates/sk-events/: Cargo.toml
backend-rs/crates/sk-events/src/: lib.rs
backend-rs/crates/sk-files/: Cargo.toml
backend-rs/crates/sk-files/src/: lib.rs
backend-rs/crates/sk-fleet/: Cargo.toml
backend-rs/crates/sk-fleet/src/: lib.rs
backend-rs/crates/sk-ftp/: Cargo.toml
backend-rs/crates/sk-ftp/src/: lib.rs
backend-rs/crates/sk-git/: Cargo.toml
backend-rs/crates/sk-git/src/: lib.rs
backend-rs/crates/sk-gpu/: Cargo.toml
backend-rs/crates/sk-gpu/src/: lib.rs
backend-rs/crates/sk-jobs/: Cargo.toml
backend-rs/crates/sk-jobs/src/: lib.rs
backend-rs/crates/sk-magento/: Cargo.toml
backend-rs/crates/sk-magento/src/: actions.rs  backup.rs  compose.rs  lib.rs  provision.rs  store.rs
backend-rs/crates/sk-models/: Cargo.toml
backend-rs/crates/sk-models/src/: lib.rs  permissions.rs  settings.rs  user.rs
backend-rs/crates/sk-monitor/: Cargo.toml
backend-rs/crates/sk-monitor/src/: lib.rs
backend-rs/crates/sk-ops/: Cargo.toml
backend-rs/crates/sk-ops/src/: cron.rs  lib.rs  logs.rs  services.rs
backend-rs/crates/sk-plugins/: Cargo.toml
backend-rs/crates/sk-plugins/src/: lib.rs
backend-rs/crates/sk-projects/: Cargo.toml
backend-rs/crates/sk-projects/src/: lib.rs
backend-rs/crates/sk-runtimes/: Cargo.toml
backend-rs/crates/sk-runtimes/src/: lib.rs
backend-rs/crates/sk-security/: Cargo.toml
backend-rs/crates/sk-security/src/: lib.rs
backend-rs/crates/sk-server/: Cargo.toml
backend-rs/crates/sk-server/src/: bootstrap.rs  db_backup.rs  error.rs  event_delivery.rs  extract.rs  le_renew.rs  main.rs  monitor.rs  sampler.rs  sidecar.rs  socket.rs  state.rs
backend-rs/crates/sk-server/src/routes/: admin.rs  ai.rs  apps.rs  auth.rs  backups.rs  cloud.rs  cloudflare.rs  compat.rs  db.rs  deploy.rs  dns.rs  docker.rs  email.rs  events.rs  files.rs  fleet.rs  ftp.rs  git.rs  gpu.rs  jobs.rs  magento.rs  mobile.rs  mod.rs  monitoring.rs  ops.rs  performance.rs  plugins.rs  projects.rs  runtimes.rs  security.rs  servers.rs  sso.rs  status.rs  stubs.rs  system.rs  templates.rs  web.rs  wordpress.rs  workflows.rs
backend-rs/crates/sk-sso/: Cargo.toml
backend-rs/crates/sk-sso/src/: lib.rs
backend-rs/crates/sk-status/: Cargo.toml
backend-rs/crates/sk-status/src/: lib.rs
backend-rs/crates/sk-system/: Cargo.toml
backend-rs/crates/sk-system/src/: fmt.rs  lib.rs  processes.rs
backend-rs/crates/sk-templates/: Cargo.toml
backend-rs/crates/sk-templates/src/: lib.rs  resolve.rs
backend-rs/crates/sk-terminal/: Cargo.toml
backend-rs/crates/sk-terminal/src/: lib.rs
backend-rs/crates/sk-web/: Cargo.toml
backend-rs/crates/sk-web/src/: domains.rs  lib.rs  nginx.rs  php.rs  ssl.rs
backend-rs/crates/sk-wordpress/: Cargo.toml
backend-rs/crates/sk-wordpress/src/: lib.rs
backend-rs/crates/sk-workflows/: Cargo.toml
backend-rs/crates/sk-workflows/src/: lib.rs
backend-rs/migrations/: 0001_init.sql
backend-rs/pi-tools/: serverkit-tools.ts
backend/app/: __init__.py  agent_gateway.py  paths.py  sockets.py
backend/migrations/: env.py
deploy/: serverkit.service
dev/: dev.sh
docs/: AGENT_AUDIT.md  API.md  API_ROUTE_LEDGER.md  ARCHITECTURE.md  BACKUP_PROTECTION.md  COMPETITIVE_ANALYSIS.md  CONNECTIONS_ROADMAP.md  DEPLOYMENT.md  ENHANCEMENTS.md  EXTENSIONS.md  EXTENSIONS_REGISTRY.md  EXTRACTION_EMAIL_AUDIT.md  EXTRACTION_WORDPRESS_AUDIT.md  FEATURE_GAPS.md  HORIZONTAL_SCALING_SPEC.md  INSTALLATION.md  LOCAL_DEVELOPMENT.md  MARKET_POSITIONING.md  MCP_SERVER_ACCESS.md  MULTI_ENVIRONMENT.md  NEW_FEATURES.md  README.es.md  README.md  README.pt.md  README.zh-CN.md  REDESIGN_MAP.md  RUST_ROUTE_COMPLETION_ROADMAP.md  TEMPLATE_CATALOG_SCHEMA.md  WORDPRESS_ROADMAP.md  api_route_families.json  pairing.md
frontend/: .env.development  Dockerfile  GEMINI.md  README.md  agents.md  claude.md  components.json  eslint.config.js  how_it_works.md  index.html  nginx.conf  package-lock.json  package.json  setup-hooks.sh  vite.config.js
nginx/: nginx.conf
scripts/: audit_frontend_routes.py  build-release.sh  check_route_ledger.py  install.ps1  install.sh  new-extension.mjs  setup-nginx-proxy.sh  setup-wsl.sh  sync-builtin-frontends.mjs  test-routing.sh  update.sh
templates/: serverkit-backend.service.in
(+1237 files in other folders)
