[package]
name = "sk-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
scrypt.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
subtle.workspace = true
rand.workspace = true
thiserror.workspace = true
