[package]
name = "sk-magento"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sk-core.workspace = true
sk-web.workspace = true
sk-ops.workspace = true
sk-acme = { workspace = true }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rand.workspace = true
anyhow.workspace = true
tracing.workspace = true
