[package]
name = "sk-runtimes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sk-core.workspace = true
sk-jobs.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
