[package]
name = "sk-templates"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
regex = "1"
rand.workspace = true
hex.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
