[package]
name = "sk-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sk-acme.workspace = true
anyhow.workspace = true
chrono.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
regex = "1"
tracing.workspace = true
